2009-12-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=32499
        Add client based Geolocation provider

        Add first cut of a client based Geolocation provider. This is guarded by
        ENABLE(CLIENT_BASED_GEOLOCATION) and is off by default for now. This adds a
        GeolocationControllerClient interface that no-one currently implements,
        but will in a subsequent patch.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_init):

2009-12-14  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        New setting to allow applications to completely suppress the
        default context menu that is generated by WebKit. This allows them
        to still pass the event to the default handler without needing to
        use ugly hacks such as handling populate-popup, and removing all
        the items from the default context menu.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_forward_context_menu_event):

2009-12-13  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Also give the right click event to the frame's event handler, if
        there WebCore decides to not generate the default context
        menu. This fixes some pages that handle right-button clicks for
        things other than context menu creation.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_forward_context_menu_event):

2009-12-13  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Holger Freyther.

        http://bugs.webkit.org/show_bug.cgi?id=31014
        [Gtk] Build fails with gtk+-2.10 (no tested with older releases)
